# 2048game

./: CMakeLists.txt  LICENSE  README.md  main.cpp  widget.cpp  widget.h
